<resources>
    <string name="app_name">Gdpms</string>
    <string name="gdpms_title">选课登录/Login</string>
    <string name="gdpms_user">用户名:</string>
    <string name="gdpms_usertip">请输入Email或手机号</string>
    <string name="gdpms_password">密  码:</string>
    <string name="gdpms_student">学生</string>
    <string name="gdpms_teacher">教师</string>
    <string name="gdpms_chairman">系主任</string>
    <string name="gdpms_adminstrator">管理员</string>
    <string name="gdpms_login">登录</string>
    <string name="gdpms_wuzhanghao">没有账号？</string>
    <string name="gdpms_registe">注册</string>
    <string name="gdpms_forget_password">忘记密码?</string>

    <string name="gdpms_repassword">确认密码:</string>
    <string name="gdpms_phone">手机号:</string>
    <string name="gdpms_email">邮箱:</string>
    <string name="gdpms_enter">确定</string>
    <string name="gdpms_pass">取消</string>

    <string name="gdpms_change_password">忘记密码?</string>
    <string name="gdpms_old_password">原密码:</string>
    <string name="gdpms_new_password">新密码:</string>

    <string name="gdpms_scan">选题浏览</string>
    <string name="gdpms_done">已选课题</string>
    <string name="gdpms_book">任务书</string>
    <string name="gdpms_coomit">任务提交</string>
    <string name="gdpms_answer">教师答疑</string>
    <string name="gdpms_result">答辩成绩</string>
    <string name="gdpms_load">下载</string>

    <string name="gdpms_notice">公告</string>
    <string name="gdpms_done_list">已选课题列表</string>
<<<<<<< 2b2fc41fe5a5c4f93c856aba2090f6c6a9424678
    <string name="gdpms_task">课题名称</string>
=======
    <string name="gdpms_task_name">课题名称</string>
>>>>>>> bingxing
    <string name="gdpms_year">申请学年</string>
    <string name="gdpms_who">指导老师</string>
    <string name="gdpms_number">学生人数</string>
    <string name="gdpms_from">课题来源</string>
    <string name="gdpms_model">选题模式</string>
    <string name="gdpms_type">课题类型</string>
    <string name="gdpms_difficult">课题难易程度</string>
    <string name="gdpms_work">课题工作量</string>
    <string name="gdpms_degree">综合性训练程度</string>
    <string name="gdpms_isok">课题所需条件是否具备</string>
    <string name="gdpms_hasworks">是否实物作品</string>
    <string name="gdpms_message_content">课题内容介绍</string>
    <string name="gdpms_task_require">毕业设计（论文）要求</string>
<<<<<<< 2b2fc41fe5a5c4f93c856aba2090f6c6a9424678
    <!--<string name="gdpms_task">课题名称</string>-->
    <!--<string name="gdpms_task">课题名称</string>-->
    <!--<string name="gdpms_task">课题名称</string>-->
    <!--<string name="gdpms_task">课题名称</string>-->
    <!--<string name="gdpms_task">课题名称</string>-->
    <!--<string name="gdpms_task">课题名称</string>-->
    <!--<string name="gdpms_task">课题名称</string>-->
    <!--<string name="gdpms_task">课题名称</string>-->
    <!--<string name="gdpms_task">课题名称</string>-->
    <!--<string name="gdpms_task">课题名称</string>-->

=======

    <string name="gdpms_my_result">我的成绩</string>
    <string name="gdpms_first_result">开题成绩</string>
    <string name="gdpms_mid_result">中期成绩</string>
    <string name="gdpms_reply_result">答辩成绩</string>
    <string name="gdpms_total_result">总成绩</string>
    <string name="gdpms_good_result">优秀论文情况</string>
    <string name="gdpms_result_rank">成绩等级</string>

    <string name="gdpms_college">学院</string>
    <string name="gdpms_major">专业</string>
    <string name="gdpms_id">学号</string>
    <string name="gdpms_name">学生姓名</string>
    <string name="gdpms_class">班级</string>
    <string name="gdpms_longbook">燕山大学毕业设计(论文)任务书</string>
    <string name="gdpms_book_title">题目</string>
    <string name="gdpms_title_name">题目名称</string>
    <string name="gdpms_title_nature">题目性质</string>
    <string name="gdpms_title_type">题目类型</string>
    <string name="gdpms_title_from">题目来源</string>
    <string name="gdpms_mian_content">主要内容</string>
    <string name="gdpms_base_require">基本要求</string>
    <string name="gdpms_referece">参考资料</string>
    <!--<string name="gdpms_task">周次</string>-->
    <!--<string name="gdpms_task">课题名称</string>-->
    <!--<string name="gdpms_task">课题名称</string>-->
>>>>>>> bingxing





</resources>
